--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.12.5",
-    "bootstrap": "4.5.3",
     "jquery": "3.5.1",
     "popper.js": "1.16.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-router-dom": "^5.2.0",
-    "reactstrap": "8.7.1"
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
