--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.12.5",
+    "bootstrap": "^4.5.3",
+    "feather-icons": "^4.28.0",
     "jquery": "3.5.1",
     "popper.js": "1.16.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-feather": "^2.0.9",
+    "react-router-dom": "^5.2.0",
+    "reactstrap": "^8.7.1",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
